* fixed button text wrapping

--- a/src/components/common/button/styles.module.scss
+++ b/src/components/common/button/styles.module.scss
@@ -7,4 +7,6 @@
     border-radius: 5px;
     font-weight: bold;
     padding: 10px;
+
+    white-space: nowrap;
 }
